# image-engine

./: CMakeLists.txt  README.md
include/: crop.h  display_image.h  image.h  load_image.h  ops.h
src/: crop.cpp  display_image.cpp  image.cpp  load_image.cpp  main.cpp
src/ops/: blur.cpp  crop.cpp  rotate.cpp
